5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1679_1872.log
== TEST (2019-04-28 11:32:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("numero: "))
y=float(input("numero: "))

if(x == 0.0 and y == 0.0):
	print("Origem")
elif(x == 0.0 and y != 0.0):
	print("Eixo X")
elif(y == 0.0 and x != 0.0):
	print("Eixo Y")
elif(x > 0.0 and y > 0.0):
	print("Q1")
else:
	print("Q4")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 11:42:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("numero: "))
y=float(input("numero: "))

if(x == 0.0 and y == 0.0):
	print("Origem")
elif(x == 0.0 and y != 0.0):
	print("Eixo X")
elif(y == 0.0 and x != 0.0):
	print("Eixo Y")
elif(x > 0.0 and y > 0.0):
	print( "Q1")
elif(x < 0.0 and y > 0.0)	:
	print("Q2")
elif(x < 0.0 and y < 0.0):
	print("Q3")
else:
	print("Q4")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 11:43:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("numero: "))
y=float(input("numero: "))

if(x == 0.0 and y == 0.0):
	print("Origem")
elif(x == 0.0 and y != 0.0):
	print("Eixo X")
elif(y == 0.0 and x != 0.0):
	print("Eixo Y")
elif(x > 0.0 and y > 0.0):
	print( "Q1")
elif(x < 0.0 and y > 0.0)	:
	print("Q2")
elif(x < 0.0 and y < 0.0):
	print("Q3")
else:
	print("Q4")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 11:43:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("numero: "))
y=float(input("numero: "))

if(x == 0.0 and y == 0.0):
	print("Origem")
elif(x == 0.0 and y == 0.0):
	print("Eixo X")
elif(y == 0.0 and x == 0.0):
	print("Eixo Y")
elif(x > 0.0 and y > 0.0):
	print( "Q1")
elif(x < 0.0 and y > 0.0)	:
	print("Q2")
elif(x < 0.0 and y < 0.0):
	print("Q3")
else:
	print("Q4")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 11:45:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("numero: "))
y=float(input("numero: "))

if(x == 0 and y == 0):
	print("Origem")
elif(x == 0 and y != 0):
	print("Eixo X")
elif(y == 0 and x != 0):
	print("Eixo Y")
elif(x > 0 and y > 0):
	print( "Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
else:
	print("Q4")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 11:48:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("numero: "))
y=float(input("numero: "))
if(x > y = 0 and y > x =0):
	if(x == 0 and y == 0):
		print("Origem")
	elif(x == 0 and y != 0):
		print("Eixo X")
	elif(y == 0 and x != 0):
		print("Eixo Y")
	elif(x > 0 and y > 0):
		print( "Q1")
	elif(x < 0 and y > 0):
		print("Q2")
	elif(x < 0 and y < 0):
		print("Q3")
else:
	print("Q4")
-- ERROR:
File "XXXX", line 4
    if(x > y = 0 and y > x =0):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 11:48:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("numero: "))
y=float(input("numero: "))
if(x > y and y > x ):
	if(x == 0 and y == 0):
		print("Origem")
	elif(x == 0 and y != 0):
		print("Eixo X")
	elif(y == 0 and x != 0):
		print("Eixo Y")
	elif(x > 0 and y > 0):
		print( "Q1")
	elif(x < 0 and y > 0):
		print("Q2")
	elif(x < 0 and y < 0):
		print("Q3")
else:
	print("Q4")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 11:55:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("numero: "))
y=float(input("numero: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print( "Q4")
elif(x == 0 and y == 0):
	print("Origem")
elif(y == 0 and x != 0):
	print("Eixo X")
else:
	print("Eixo Y")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 11:55:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("numero: "))
y=float(input("numero: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print( "Q4")
elif(x == 0 and y == 0):
	print("Origem")
elif(y == 0 and x != 0):
	print("Eixo X")
else:
	print("Eixo Y")
-- EXECUTION TIME:
0.211391
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1872/main.py", line 2, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:31:35) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("numero: "))
y=float(input("numero: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print( "Q4")
elif(x == 0 and y == 0):
	print("Origem")
elif(y == 0):
	print("Eixo X")
else:
	print("Eixo Y")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 12:31:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("numero: "))
y=float(input("numero: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print( "Q4")
elif(x == 0 and y == 0):
	print("Origem")
elif(y == 0):
	print("Eixo X")
else:
	print("Eixo Y")
-- EXECUTION TIME:
0.217092
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1872/main.py", line 2, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 15:57:35) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("numero: "))
y=float(input("numero: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print( "Q4")
elif(x == 0 and y == 0):
	print("Origem")
elif(y == 0):
	print("Eixo X")
else:
	print("Eixo Y")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 15:57:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("numero: "))
y=float(input("numero: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print( "Q4")
elif(x == 0 and y == 0):
	print("Origem")
elif(y == 0):
	print("Eixo X")
else:
	print("Eixo Y")
-- EXECUTION TIME:
0.190817
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1872/main.py", line 2, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 15:58:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("numero: "))
y=float(input("numero: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print( "Q4")
elif(x == 0 and y == 0):
	print("Origem")
elif(y == 0):
	print("Eixo X")
else:
	print("Eixo Y")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 15:58:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("numero x: "))
y=float(input("numero y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print( "Q4")
elif(x == 0 and y == 0):
	print("Origem")
elif(y == 0):
	print("Eixo X")
else:
	print("Eixo Y")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 15:59:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero x: "))
y=float(input("numero y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print( "Q4")
elif(x == 0 and y == 0):
	print("Origem")
elif(y == 0):
	print("Eixo X")
else:
	print("Eixo Y")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 15:59:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero x: "))
y=float(input("numero y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print( "Q4")
elif(x == 0 and y == 0):
	print("Origem")
elif(y == 0):
	print("Eixo X")
else:
	print("Eixo Y")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 15:59:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero x: "))
y=float(input("numero y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print( "Q4")
elif(x == 0 and y == 0):
	print("Origem")
elif(y == 0):
	print("Eixo X")
else:
	print("Eixo Y")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:00:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero x: "))
y=float(input("numero y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print( "Q4")
elif(x == 0 and y == 0):
	print("Origem")
elif(y == 0):
	print("Eixo X")
else:
	print("Eixo Y")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:00:38) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero x: "))
y=float(input("numero y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print( "Q4")
elif(x == 0 and y == 0):
	print("Origem")
elif(y == 0):
	print("Eixo X")
else:
	print("Eixo Y")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:00:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero x: "))
y=float(input("numero y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print( "Q4")
elif(x == 0 and y == 0):
	print("Origem")
elif(y == 0):
	print("Eixo X")
else:
	print("Eixo Y")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:01:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero x: "))
y=float(input("numero y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print( "Q4")
elif(x == 0 and y == 0):
	print("Origem")
elif(y == 0):
	print("Eixo X")
else:
	print("Eixo Y")
-- EXECUTION TIME:
0.17947
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:23:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero x: "))
y=float(input("numero y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print( "Q4")
elif(x == 0 and y == 0):
	print("Origem")
elif(y == 0):
	print("Eixo X")
else:
	print("Eixo Y")
-- EXECUTION TIME:
0.1409
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 21:40:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero x: "))
y=float(input("numero y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print( "Q4")
elif(x == 0 and y == 0):
	print("Origem")
elif(y == 0):
	print("Eixo X")
else:
	print("Eixo Y")
-- EXECUTION TIME:
0.168685
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
